# stable-diffusion-sample

./: README.md  face_mosaic.py  face_mosaic_mediapipe.py  face_mosaic_recognition.py  generate.py  pronpt  pyproject.toml  run_generate.sh
sd_env/: pyvenv.cfg
