[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stable-diffusion-sample"
version = "0.1.0"
description = "Generate a full-body image with face mosaic using Stable Diffusion"
authors = ["Your Name <you@example.com>"]
requires-python = ">=3.10"

dependencies = [
    "torch>=2.0.0",
    "diffusers>=0.27.0",
    "transformers>=4.40.0",
    "numpy==1.24.4",
    "opencv-python>=4.8.0",
    "Pillow>=10.0.0"
]
